--- a/wpforms-lite/changelog.txt
+++ b/wpforms-lite/changelog.txt
@@ -1,4 +1,8 @@
 == Changelog ==
+= 1.9.1.3 =
+- Fixed: HTML tags didn't work in an agreement text of the GDPR field when a field's label was hidden.
+- Fixed: HTML tags in choices of the Checkboxes, Multiple Choice, and Dropdown fields were escaped and didn't work as expected.
+
 = 1.9.1.2 =
 - Fixed: There was a conflict with the WooCommerce Subscriptions plugin.
 
