--- a/wpforms-lite/changelog.txt
+++ b/wpforms-lite/changelog.txt
@@ -1,4 +1,7 @@
 == Changelog ==
+= 1.9.1.5 =
+- Fixed: PHP warnings appeared with WordPress widgets.
+
 = 1.9.1.4 =
 - Fixed: Multiple sending of weekly summary emails.
 
