--- a/wpforms-lite/changelog.txt
+++ b/wpforms-lite/changelog.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 1.9.2.2 =
+- Fixed: _load_textdomain_just_in_time notice with WordPress 6.7.
+- Some translations were empty with WordPress 6.5+.
+
 = 1.9.2.1 =
 - Added: The Settings section in the WPForms admin bar menu.
 - Added: Update Stripe payments status after canceling a refund in the Stripe dashboard.
