--- a/wpforms-lite/changelog.txt
+++ b/wpforms-lite/changelog.txt
@@ -1,9 +1,9 @@
 == Changelog ==
 
-= 1.9.7.1 =
-- Fixed: Various RTL problems on the form builder screen.
+= 1.9.7.2 =
+- Fixed: JS errors might affect the form submission on some environments with installed plugins for caching.
 
-= 1.9.7 =
+= 1.9.7.1 =
 - Added: Ability to apply Styles and Themes directly within the WPForms Form Builder.
 - Added: Ability to copy whole Smart Tags input content if it contains smart tags.
 - Added: Number field validation messages control on the Settings > Validation page.
@@ -15,6 +15,7 @@
 - Changed: Improved compatibility with the Paid Memberships Pro plugin.
 - Fixed: The spacing between the template badge and the form name was too small.
 - Fixed: Square Credit Card field error was still displayed after entering valid details.
+- Fixed: Various RTL problems on the form builder screen.
 
 = 1.9.6.2 =
 - Fixed: "Please enable JavaScript" message was displayed over a form even when JavaScript was enabled.
